# paper-search-mcp

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  smithery.yaml
claude-code/: SKILL.md
paper_search_mcp/: api.py  cli.py  config.py  dedup.py  paper.py  server.py
paper_search_mcp/academic_platforms/: arxiv.py  core.py  crossref.py  datacite.py  doaj.py  openalex.py  semantic.py
tests/: test_api.py  test_arxiv.py  test_config_env.py  test_core.py  test_crossref.py  test_crossref_search.py  test_datacite.py  test_dedup.py  test_doaj.py  test_openalex_search.py  test_package_entrypoints.py  test_paper_output.py  test_semantic.py  test_semantic_search.py  test_server.py
