[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paper-search-mcp"
version = "0.1.4"
authors = [{ name = "P.S Zhang", email = "pengsongzhang96@gmail.com" }]
description = "A MCP server for searching and downloading academic papers from multiple sources."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = [
    "mcp",
    "academic",
    "papers",
    "search",
    "arxiv",
    "core",
    "doaj",
    "openalex",
    "crossref",
    "semantic-scholar",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "requests",
    "feedparser",
    "fastmcp",
    "pypdf",
    "mcp[cli]>=1.6.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "httpx[socks]>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/openags/paper-search-mcp"
Repository = "https://github.com/openags/paper-search-mcp"
Issues = "https://github.com/openags/paper-search-mcp/issues"

[project.scripts]
paper-search-mcp = "paper_search_mcp.server:main"
paper-search = "paper_search_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["paper_search_mcp"]
